--- a/kanban.html
+++ b/kanban.html
@@ -19,6 +19,7 @@
         </div>
         <div class="header__user-avatar">
           <img src="./img/avatar-1.svg" alt="аватар" />
+          <button class="header__user-logout">Выйти</button>
         </div>
       </div>
     </header>
@@ -29,6 +30,12 @@
           <div class="subheader__info-filter">
             <img src="./img/subheader-filter.svg" alt="" />
             Фильтры
+            <div class="subheader__info-filter--reset">
+              <div class="reset">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="#777777"  viewBox="0 0 50 50" width="50px" height="50px"><path d="M 7.71875 6.28125 L 6.28125 7.71875 L 23.5625 25 L 6.28125 42.28125 L 7.71875 43.71875 L 25 26.4375 L 42.28125 43.71875 L 43.71875 42.28125 L 26.4375 25 L 43.71875 7.71875 L 42.28125 6.28125 L 25 23.5625 Z"/></svg>
+              </div>
+              Сбросить фильтр
+            </div>
           </div>
         </div>
         <div class="subheader__actions">
@@ -100,6 +107,7 @@
 
     <div class="error-container"></div>
 
+    <!-- Модальное окно добавления задачи -->
     <div class="add-task-modal">
         <div class="add-task-modal__container">
             <h3 class="auth__title auth__title--sm">Создать новую задачу</h3>
@@ -107,9 +115,7 @@
                 <input required id="title" class="auth__input" type="text" placeholder="Название задачи">
                 <textarea required id="description" class="auth__input" name="" id="" placeholder="Описание задачи"></textarea>
                 <input required id="date" class="auth__input" type="date" placeholder="Дата выполнения">
-                <select id="executor" class="auth__input auth__input" required id="position">
-                    <option selected value="user">Вася</option>
-                    <option value="admin">Не Вася</option>
+                <select id="executor" class="auth__input auth__input add-task__input-executor" required id="position">
                 </select>
                 <button id="create-task" class="auth-btn">Создать</button>
             </form>
@@ -117,6 +123,53 @@
                 <img src="./img/close-icon.svg" alt="">
             </button>
         </div>
+    </div>
+
+
+    <!-- Модальное окно фильтрации -->
+    <div class="filter-modal">
+      <div class="filter-modal__container">
+        <div class="filter-modal__title auth__title auth__title--sm">Фильтр</div>
+          <div class="filter-modal__label-search">Ключевое слово</div>
+          <input type="text" placeholder="Введите ключевое слово" id="searchInputFilter" class="filter-modal__search">
+          <div class="filter-modal__checkbox-wrapper">
+            <div class="filter-modal__checkbox-title">Срок</div>
+            <div class="filter-modal__checkbox-content">
+              <input type="checkbox" id="overdue" class="custom-checkbox">
+              <label for="overdue" class="custom-label filter-modal__checkbox-descr filter-modal__checkbox-descr--red">Просроченные</label>
+            </div>
+            <div class="filter-modal__checkbox-content">
+              <input type="checkbox" id="dueSoon" class="custom-checkbox">
+              <label for="dueSoon" class="custom-label filter-modal__checkbox-descr filter-modal__checkbox-descr--warning">Истекает в течение суток</label>
+            </div>
+            <div class="filter-modal__checkbox-content">
+              <input type="checkbox" id="dueWeek" class="custom-checkbox">
+              <label for="dueWeek" class="custom-label filter-modal__checkbox-descr filter-modal__checkbox-descr--succsess">Истекает в течение недели</label>
+            </div>
+          </div>
+          <button class="filter-modal__close">
+            <img src="./img/close-icon.svg" alt="">
+          </button>
+      </div>
+    </div>
+
+    <!-- Модальное окно просмотра карточки -->
+    <div class="task-modal">
+      <div class="task-modal__container">
+        <div class="task-modal__decor"></div>
+        <div class="task-modal__title auth__title auth__title--sm"></div>
+        <div class="task-modal__date">До <span class="taskmodal-date-value"></span></div>
+        <div class="task-modal__description-title">Описание</div>
+        <div class="task-modal__description"></div>
+        <input type="text" class="task-modal__input" placeholder="Напишите комментарий...">
+        <div class="task-modal__description-title">Исполнитель</div>
+        <div class="task-modal__executor"></div>
+        <select id="executor-task-modal" class="auth__input auth__input task-modal__input-executor" required id="position"></select>
+        <button class="task-modal__close">
+          <img src="./img/close-icon.svg" alt="">
+        </button>
+        <button class="task-modal__delete-task-btn" id="delete-button">Удалить задачу</button>
+      </div>
     </div>
 
     <script src="./kanban.js"></script>
